--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinnerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="cn.edu.gdmec.android.boxuegu.activity.RegisterActivity">
-    <include layout="Layout/main_title_bar"/>
+    android:background="@drawable/register_bg"
+    android:orientation="vertical">
+    <include layout="@layout/main_title_bar"/>
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
@@ -15,8 +14,8 @@
         android:src="@drawable/default_icon"/>
     <EditText
         android:id="@+id/et_user_name"
-        android:layout_height="48dp"
         android:layout_width="fill_parent"
+        android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
@@ -26,55 +25,56 @@
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
         android:hint="请输入用户名"
-        android:paddingLeft="8dp"
+        android:paddingTop="8dp"
         android:singleLine="true"
         android:textColor="#000000"
-        android:textColorHint="#a3a3a3"
+        android:textColorHighlight="#a3a3a3"
         android:textSize="14sp"/>
     <EditText
-        android:id="@+id/et_psw"
+        android:singleLine="true"
+        android:id="@+id/et_pwd"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
-        android:layout_gravity="center_horizontal"
+        android:background="@drawable/register_psw_bg"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/register_psw_bg"
-        android:drawableLeft="@drawable/psw_icon"
+        android:drawableLeft="@drawable/user_name_icon"
+        android:paddingLeft="8dp"
         android:drawablePadding="10dp"
         android:hint="请输入密码"
-        android:inputType="textPassword"
-        android:paddingLeft="8dp"
-        android:singleLine="true"
-        android:textColor="#000000"
+        android:gravity="center_vertical"
         android:textColorHint="#a3a3a3"
+        android:textColor="#000000"
         android:textSize="14sp"/>
     <EditText
+        android:singleLine="true"
         android:id="@+id/et_psw_again"
         android:layout_width="fill_parent"
         android:layout_height="48dp"
-        android:layout_gravity="center_horizontal"
+        android:background="@drawable/register_psw_again_bg"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/register_psw_again_bg"
-        android:drawableLeft="@drawable/psw_icon"
+        android:drawableLeft="@drawable/user_name_icon"
+        android:paddingLeft="8dp"
         android:drawablePadding="10dp"
         android:hint="请再次输入密码"
-        android:inputType="textPassword"
-        android:paddingLeft="8dp"
-        android:singleLine="true"
-        android:textColor="#000000"
+        android:gravity="center_vertical"
         android:textColorHint="#a3a3a3"
+        android:textColor="#000000"
         android:textSize="14sp"/>
+
     <Button
+        android:text="注 册"
         android:id="@+id/btn_register"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/register_selector"
-        android:text="注册"
         android:textColor="@android:color/white"
-        android:textSize="18sp"/>
-</LinnerLayout>
+        android:textSize="18sp"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/register_selector"/>
+
+
+</LinearLayout>
