--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/login_bg"
     tools:context="cn.edu.gdmec.android.boxuegu.activity.LoginActivity">
     <include layout="@layout/main_title_bar"></include>
     <ImageView
