--- a/app/src/main/res/layout/exercises_list_item.xml
+++ b/app/src/main/res/layout/exercises_list_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingBottom="15dp"
     android:paddingTop="15dp"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    android:orientation="horizontal">
     <TextView
         android:layout_width="40dp"
         android:layout_height="40dp"
