--- a/app/src/main/res/layout/activity_exercises_detail.xml
+++ b/app/src/main/res/layout/activity_exercises_detail.xml
@@ -30,8 +30,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/tv_dibu"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:gravity="center"
         android:text="第1页"/>
+
 </LinearLayout>
